# vestec-wp3

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  README.md  clusterDiags.pvsm  clustering.hpp  clustering_result.hpp  clustering_result_test.cpp  clustering_test.cpp  generateAndReducePersistenceDiagrams.py  information_criteria.hpp  information_criteria_test.cpp  kmeans.hpp  kmeans_test.cpp  likelihoods.hpp  likelihoods_test.cpp  make.sh
clustering_information_criteria/: .gitignore  README.md  clustering_result.hpp  clustering_result_test.cpp  information_criteria.hpp  kmeans_test.cpp  main.cpp  test_main.cpp
clustering_scripts/: clusterDiags_space_weather.py
data/: README.md
data/gaussians/distance_approx_results/: distances_100s_k10.txt  distances_100s_k2.txt  distances_100s_k3.txt  distances_100s_k4.txt  distances_100s_k5.txt  distances_100s_k6.txt  distances_100s_k7.txt  distances_100s_k8.txt  (+17 more)
data/isabel/: isabel_100s_k10.txt  isabel_100s_k2.txt  isabel_100s_k3.txt  isabel_100s_k4.txt  isabel_100s_k5.txt  isabel_100s_k6.txt  isabel_100s_k7.txt  isabel_100s_k8.txt  isabel_100s_k9.txt  isabel_10s_k10.txt  isabel_10s_k2.txt  isabel_10s_k3.txt  isabel_10s_k4.txt  isabel_10s_k5.txt  isabel_10s_k6.txt  isabel_10s_k7.txt  isabel_10s_k8.txt  isabel_10s_k9.txt
data/seaSurfaceHeight/: ssh_100s_k10.txt  ssh_100s_k2.txt  ssh_100s_k3.txt  ssh_100s_k4.txt  ssh_100s_k5.txt  ssh_100s_k6.txt  ssh_100s_k7.txt  ssh_100s_k8.txt  ssh_100s_k9.txt  ssh_10s_k10.txt  ssh_10s_k2.txt  ssh_10s_k3.txt  ssh_10s_k4.txt  ssh_10s_k5.txt  ssh_10s_k6.txt  ssh_10s_k7.txt  ssh_10s_k8.txt  ssh_10s_k9.txt
demonstrator/clustering_scripts/: clusterDiags_disease.py  clusterDiags_wildfire.py
demonstrator/paraview_states/: clustering_wildfire_precomputed_data.pvsm
demonstrator/space_weather_in-situ/: make.sh
paraview_states/: clustering_disease_precomputed_data.pvsm  clustering_space_weather_precomputed_data.pvsm
paraview_states/gaussians/: GAUSSIANS_clustering_output_port#1.vtu  clustering_barycenter_gaussians.sh  short_paper_gaussians.pvsm
paraview_states/isabel/: ISABEL_clustering_output_port#1.vtu  clustering_isabel.sh
paraview_states/seaSurfaceHeight/: SSH_clustering_output_port#1.vtu  clustering_seaSurfaceHeight.sh
paraview_states/startingVortex/: STARTINGVORTEX_clustering_output_port#1.vtu  clustering_startingVortex.sh  short_paper_starting_vortex.pvsm  startingVortex.vti  startingVortex2.vti
paraview_states/vortexStreet/: VORTEXSTREET_clustering_port#1.vtu  clustering_vortexStreet.sh
space_weather_in-situ/: clusterDiags.py  launch-runs.sh
space_weather_in-situ/ipicmini/src/: CMakeLists.txt  iPICmini.cpp
space_weather_in-situ/ipicmini/src/grids/: Grid3DCU.cpp
space_weather_in-situ/ipicmini/src/include/: CG.h  EMfields3D.h  Grid3DCU.h  PSKOutput.h  Particles3D.h  Particles3Dcomm.h  TimeTasks.h
space_weather_in-situ/ipicmini/src/inputoutput/: ParallelIO.cpp
space_weather_in-situ/ipicmini/src/main/: Collective.cpp  iPIC3Dlib.cpp
space_weather_in-situ/ipicmini/src/solvers/: CG.cpp  GMRES.cpp
space_weather_in-situ/ipicmini/src/utility/: TimeTasks.cpp
(+743 files in other folders)
